Fix more stories section and  header on small screen

--- a/style.css
+++ b/style.css
@@ -9,14 +9,19 @@ body {
   min-height: 94px;
   background-color: #f72210;
   position: relative;
+  max-width: 1315px;
 }
 
 #navbar-2 {
   position: fixed;
-  top: 0;
-  height: auto;
-  max-width: 100%;
-  z-index: auto;
+  z-index: 1;
+  min-width: 360px !important;
+  height: 50px !important;
+}
+
+#navbar-2 div {
+  margin: -10px -10px;
+  padding: 13px;
 }
 
 .weather {
@@ -38,16 +43,18 @@ nav {
 }
 
 main,
-nav,
 header,
-footer {
-  max-width: 1310px;
+footer,
+.navbar {
+  max-width: 1315px;
 }
 
 .brand-logo-2 {
+  position: relative;
   height: 20px;
   width: 132px;
   fill: #fff;
+  top: -18px;
 }
 
 main h6 {
@@ -204,4 +211,16 @@ footer svg {
   height: 36px;
   margin-right: 15px;
   margin-bottom: 12px;
+}
+
+@media only screen and (max-width: 480px) {
+  #navbar-2 {
+    font-size: 60%;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  #header {
+    display: none !important;
+  }
 }
